--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/pets?useSSL=false
-spring.datasource.username=demo
-spring.datasource.password=Password@0602
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/pets?useSSL=false
+#spring.datasource.username=demo
+#spring.datasource.password=Password@0602
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+server.tomcat.accesslog.enabled=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://dpg-ch5eub2k728ninkg0e80-a.oregon-postgres.render.com:5432/database_render_patterns_dms_b380
+spring.datasource.username= database_render_patterns_dms_b380_user
+spring.datasource.password= GdvLcbpNnv21JzelhkgWxdsrZcgeTUSw
+spring.datasource.driver-class-name=org.postgresql.Driver
